--- a/红点系统综述.md
+++ b/红点系统综述.md
@@ -56,11 +56,13 @@
 
 在进入红点所在界面的时候进行绑定，在离开该界面需要对红点进行解绑。
 
-## 2. `RedPointManager`
+## 2. `RedPointTree`
 
 红点树实现为一棵字典树，通过红点层级结构进行建树，如果层级路径上有逻辑红点尚未定义，也会递归地进行生成。
 
 红点树向`RedPointManager`提供接口来注册和删除红点，同时保存红点`id`到`RedPointStruct`的映射
+
+红点树构造方法一般为自根向叶子构造，优化为自叶子向根构造
 
 
 
@@ -72,13 +74,29 @@
 
 ```pseudocode
 RedPointStruct {
-	required number id					// 红点唯一id
+	// 必需属性
+	required number id					// 红点唯一id，可通过idString生成
 	required string idString			// 红点层级字符串：描述在字典树中的路径
+	
+	// 可选属性
+	optional function updateFuncMap		// 根据红点类型存储刷新方法
+	
+	// 红点自己维护的属性
+	optional RedPointStruct parent		// 父红点
+	optional RedPointStrcut[] children	// 子红点map，保存一个引用
+	
+	// 方法
+	addChild(RedPointStruct)			// 向RedPointTree暴露接口，用于注册红点时添加子红点
+	removeChild(number)					// 移除红点
+	isShow(param, type)					// 向RedPointManager暴露接口，判断UI是否显示
+	setDirty(boolean, type)				// 向上递归设置脏标
 	
 }
 ```
 
+## 4. 红点问题检查工具
 
+TODO
 
 
 
