--- a/红点系统综述.md
+++ b/红点系统综述.md
@@ -42,19 +42,36 @@
 
 整个红点系统由`RedPointManager`统一管理，提供对外接口来管理红点。`RedPointManager`主要包含三部分：红点森林、红点`UI`的`Map`和事件观察者（`eventObserver`）。这样设计的主要目的，是可以把逻辑、`UI`和事件相互隔离，避免耦合。
 
-为什么采用红点森林？
+**为什么采用红点森林？**
 
 因为在开发过程中，可能会遇到策划需要红点不进行穿透（自定义红点穿透），这种情况下，子红点的显示就不应该影响父红点的显示。红点森林包含多棵红点树，每棵红点树作为一个独立的结构进行逻辑管理。
 
-红点`UI`如何关联到逻辑红点？
+**红点`UI`如何关联到逻辑红点？**
 
 1. 在业务逻辑开发中，红点`UI`通过`id`绑定到逻辑红点。
 2. 事件到来时，事件观察者找到事件对应的逻辑红点。
 3. 逻辑红点进行刷新，并设置红点`UI`的显示。
 
-红点`UI`的绑定时机？
+**红点`UI`的绑定时机？**
 
 在进入红点所在界面的时候进行绑定，在离开该界面需要对红点进行解绑。
+
+**红点`UI`的刷新流程？**
+
+1. 事件通知`RedPointManager`，`RedPointManager`在森林中找到相应的`RedPointTree`，然后找到对应的那个红点
+2. 向根节点设置脏标，逻辑上，但不进行逻辑判断
+3. 如果该红点`UI`注册在`RedPointManager`中，则调用对应红点的刷新方法（向叶子红点递归地计算红点），刷新红点的显示，重置脏标
+
+**如果是其中的某个非叶子结点需要刷新该怎么处理？**
+
+先判断自身的刷新函数，本身为`true`则不再对子红点进行遍历，脏标设置为false：
+情况①：子红点又因为事件发生了变化，则该红点仍然会被设置脏标；
+情况②：该红点因为事件改变，本身需要设置脏标；
+优先级不会产生问题，因为是通过红点map进行管理的，所以不同类型的红点会有独立的脏标
+问题1：在何时进行优先级判断
+暂时考虑在`UI`刷新中，根据该红点注册的红点类型，按优先级判断，所以在`RedPointStruct:isShow()`中只对某个类型的显示与否进行判断。
+问题2：`customData`怎么处理?
+留给刷新方法自己获取
 
 ## 2. `RedPointTree`
 
@@ -82,8 +99,9 @@ RedPointStruct {
 	optional function updateFuncMap		// 根据红点类型存储刷新方法
 	
 	// 红点自己维护的属性
-	optional RedPointStruct parent		// 父红点
-	optional RedPointStrcut[] children	// 子红点map，保存一个引用
+	RedPointStruct parent		// 父红点
+	RedPointStrcut[] children	// 子红点map，保存一个引用
+	boolean[] dirtyMap			// 红点类型->脏标
 	
 	// 方法
 	addChild(RedPointStruct)			// 向RedPointTree暴露接口，用于注册红点时添加子红点
@@ -121,3 +139,8 @@ TODO
 延迟刷新
 
 当事件触发时，只有红点`UI`有效的红点才进行逻辑刷新，否则只设置脏标。
+
+# 仍留疑问
+
+1. 某个非叶子结点变化了如何刷新（UI有效）？
+   如果该结点的`showNum>0`则不对子红点进行遍历（脏标仍然为`false`），否则需要遍历，
