--- a/红点系统综述.md
+++ b/红点系统综述.md
@@ -116,6 +116,8 @@ RedPointStruct {
 
 TODO
 
+## 5. 红点树预构建工具
+
 
 
 # 需要明确的需求
@@ -136,11 +138,20 @@ TODO
 
 # 性能优化
 
-延迟刷新
+1. 延迟刷新
 
 当事件触发时，只有红点`UI`有效的红点才进行逻辑刷新，否则只设置脏标。
+
+2. 红点整合
+
+有些红点其实刷新逻辑和显示逻辑是相同的（比如有不同的可完成任务，策划希望用不同的红点来表示，但内部逻辑都是一样的），只是显示的`UI`有差异，可以归为一类
+
+3. 如果一个非叶结点的子红点全都没了，且没有刷新方法，这个红点就没有意义了，应该从红点树中取消注册
 
 # 仍留疑问
 
 1. 某个非叶子结点变化了如何刷新（UI有效）？
    如果该结点的`showNum>0`则不对子红点进行遍历（脏标仍然为`false`），否则需要遍历，
+2. 如果有需求是希望红点用特别的符号代表，比如说聊天红点希望用最新一条记录的头像这种怎么处理？
+   新增的自定义红点，`ctor`时需要传入方法，单独处理？
+3. 
