--- a/红点系统综述.md
+++ b/红点系统综述.md
@@ -8,15 +8,15 @@
 
 ### 1. 树型红点
 
-这种红点主要符合游戏的界面层级结构，子红点的显示逻辑独立，同一层级的子红点以或关系影响父红点的显示（穿透）。
+这类红点主要符合游戏的界面层级结构，子红点的显示逻辑独立，同一层级的子红点以或关系影响父红点的显示（穿透）。
 
 ### 2. 独立红点
 
-这种红点主要用于一些不穿透的独立红点，它们的显示不会影响上一级界面。
+这类红点主要用于一些不穿透的独立红点，它们的显示不会影响上一级界面。
 
 
 
-## 红点的类型
+## 红点的显示类型
 
 ### 1. new红点
 
@@ -36,7 +36,7 @@
 
 
 
-# 红点系统结构
+# 红点系统设计
 
 ## 1. `RedPointManager`
 
@@ -85,32 +85,41 @@
 
 ## 3. `RedPointStruct`
 
+<img src="./图片/RedPointStruct.png" alt="RedPointStruct的结构" style="zoom:80%;" />
+
+上图描述了`RedPointStruct`的基本结构和方法，下面将详细描述一些重要的数据和方法。
+
+### 构造方法
+
+**必要参数**
+
+在`ctor`方法中，`id`和`idString`是构造`RedPointStruct`的必要参数。`idString`是在注册红点树时传入的，在构造红点树的过程中会解析`idString`生成`id`。
+
+**可选参数**
+
+`updateFuncMap`（`key`为`RedPointType`，`value`为`funcList`）是可选参数。在实现中并未强制要求叶子红点有刷新方法，但在业务开发中，必须设置刷新方法，否则这个红点就没有意义了，所以叶子红点这个参数是必需的。对于非叶子红点，这个参数才是可选的。
+
+### 内部数据
+
+**`dirtyMap`**
+
+`dirtyMap`保存了`RedPointStruct`到是否为脏(`bool`)的映射。设置脏标的主要目的是减少不必要的计算。因为红点树作为保存红点的数据结构，在游戏开始时就创建出来了，但是实际要求显示的红点可能并不存在，所以计算红点的显示数据会浪费不必要的性能。使用`dirtyMap`后，在事件触发时对影响到的红点设置脏标，在需要实际计算时，只有有脏标的才进行计算，大大减少了不必要的计算。
+
+**`isShowMap`**
+
+保存实际计算后的红点数据，`key`为`RedPointType`。
+
+**`children`&`parent`**
+
+顾名思义，保存当前红点的子红点（`list`）和父红点，实现父子之间的双向链接。
+
+
+
 每一个红点是否都需要有刷新方法？
 
 叶子红点必须有刷新方法，否则没有意义。非叶红点可以没有刷新方法（通过子红点来进行刷新）。当非叶红点有刷新方法时，需要确定刷新方法的优先级。
 
-```pseudocode
-RedPointStruct {
-	// 必需属性
-	required number id					// 红点唯一id，可通过idString生成
-	required string idString			// 红点层级字符串：描述在字典树中的路径
-	
-	// 可选属性
-	optional function updateFuncMap		// 根据红点类型存储刷新方法
-	
-	// 红点自己维护的属性
-	RedPointStruct parent		// 父红点
-	RedPointStrcut[] children	// 子红点map，保存一个引用
-	boolean[] dirtyMap			// 红点类型->脏标
-	
-	// 方法
-	addChild(RedPointStruct)			// 向RedPointTree暴露接口，用于注册红点时添加子红点
-	removeChild(number)					// 移除红点
-	isShow(param, type)					// 向RedPointManager暴露接口，判断UI是否显示
-	setDirty(boolean, type)				// 向上递归设置脏标
-	
-}
-```
+
 
 ## 4. 红点问题检查工具
 
