文档补全、代码优化

--- a/红点系统综述.md
+++ b/红点系统综述.md
@@ -6,11 +6,11 @@
 
 红点主要分为以下两种结构：
 
-### 1. 树型红点
+**树型红点**
 
 这类红点主要符合游戏的界面层级结构，子红点的显示逻辑独立，同一层级的子红点以或关系影响父红点的显示（穿透）。
 
-### 2. 独立红点
+**独立红点**
 
 这类红点主要用于一些不穿透的独立红点，它们的显示不会影响上一级界面。
 
@@ -18,21 +18,21 @@
 
 ## 红点的显示类型
 
-### 1. new红点
+**new红点**
 
 一般用于新功能开启或者获得新道具时，消失方式为点击后消失，客户端存储点击状态。
 
-### 2. 普通红点
+**普通红点**
 
 最常见的红点，一般用于玩法可玩、道具可用或其他策划希望玩家点击的功能，点击不会消失，需要满足一定条件（如没有使用次数等）后消失，更新方式一般是玩家操作后的服务器消息回调。
 
-### 3. 数字红点
+**数字红点**
 
 一般用于玩法次数有限，提示玩家需要消耗，每次使用后数字红点会减少1，剩余次数为0红点消失。
 
-### 4. 自定义红点
+**自定义红点**
 
-为一些玩法特设的红点，逻辑可能和以上任意一种相同，但是表现不同。比如，策划可以要求有新的道具到包使用绿色感叹号，或者有新任务使用黄色感叹（逻辑同2）号。
+为一些玩法特设的红点，逻辑可能和以上任意一种相同，但是表现不同。比如，策划可以要求有新的道具到包使用绿色感叹号，或者有新任务使用黄色感叹号（逻辑同普通红点）。
 
 
 
@@ -75,7 +75,62 @@
 
 ## 2. `RedPointTree`
 
-红点树实现为一棵字典树，通过红点层级结构进行建树，如果层级路径上有逻辑红点尚未定义，也会递归地进行生成。
+### 简介
+
+<img src="./图片/红点树_字典树架构.png" alt="红点树_字典树架构" style="zoom:50%;" />
+
+上图为以字典树实现的红点树的逻辑层级结构，通过红点的路径（如`MAIN|BAG|ITEM_1`）可以快速索引到具体的`RedPointStruct`。由于每一个红点`id`是唯一的，因此红点路径（`idString`）也是唯一的。同时又可以通过`id`快速检索到具体对应的是哪个功能，为业务开发提供了较大的可扩展性。
+
+### 构造红点树
+
+构造红点树的流程相当于在红点树上新增子红点。一般来说应该从根开始建立，因为在红点树中保存了红点`id`到`RedPointStruct`的映射，所以可以从**叶子到根**进行构造。这样做的好处在于，1.可以避免遍历从根向下进行遍历（尽管事件复杂度为`log(n)`）；2.可以把直接添加红点到父红点和建树逻辑统一。
+
+从叶子到根流程如下：
+
+1.通过 `idString`（如 `"main|task|daily"`）从 **叶子到根** 依次构造节点；
+
+2.如果某一层节点已存在，则说明已经构建完；
+
+3.自动建立父子关系；
+
+4.设置叶子节点的 `updateFunc`；
+
+5.如果尚未设置 `root`，则以最顶层 id 对应节点作为根节点。
+
+```pseudocode
+function register(params):
+    idPath = params.idString              # e.g., "main|task|daily"
+    idList = split(idPath, "|")           # ["main", "task", "daily"]
+    childNode = null                      # 上一个构建的节点（初始为 null）
+
+    # 从叶子节点开始向上构建
+    for i from end of idList to start:
+        id = idList[i]
+        
+        if redPointNodeMap contains id:
+            # 节点已存在，不需要继续向上构建
+            break
+            
+        newNode = createRedPointNode(id, idPath)
+
+        if childNode is not null:
+            newNode.addChild(childNode)
+            childNode.setParent(newNode)
+
+        redPointNodeMap[id] = newNode
+        childNode = newNode               # 本轮构造的节点将作为下一轮的 child
+
+    # 设置根节点（如果还没有）
+    if root is null:
+        root = redPointNodeMap[ idList[0] ]
+
+    # 叶子节点设置更新方法
+    leafId = idList[-1]                   # 最后一个 ID
+    redPointNodeMap[leafId].setUpdateFunc(params.updateFunc)
+
+```
+
+
 
 红点树向`RedPointManager`提供接口来注册和删除红点，同时保存红点`id`到`RedPointStruct`的映射
 
@@ -149,13 +204,14 @@ TODO
 
 1. 延迟刷新
 
-当事件触发时，只有红点`UI`有效的红点才进行逻辑刷新，否则只设置脏标。
+当事件触发时，只有红点`UI`有效的红点才进行逻辑刷新，否则只设置脏标。是否可以在游戏空闲帧进行一次统一刷新？
 
 2. 红点整合
 
 有些红点其实刷新逻辑和显示逻辑是相同的（比如有不同的可完成任务，策划希望用不同的红点来表示，但内部逻辑都是一样的），只是显示的`UI`有差异，可以归为一类
 
 3. 如果一个非叶结点的子红点全都没了，且没有刷新方法，这个红点就没有意义了，应该从红点树中取消注册
+4. 如果一个分类下有很多性质类似的子红点，比如背包，如何减少红点树占用的内存呢？现在让父结点有刷新方法或许可以解决。
 
 # 仍留疑问
 
