--- a/红点系统综述.md
+++ b/红点系统综述.md
@@ -134,8 +134,6 @@ function register(params):
 
 红点树向`RedPointManager`提供接口来注册和删除红点，同时保存红点`id`到`RedPointStruct`的映射
 
-红点树构造方法一般为自根向叶子构造，优化为自叶子向根构造
-
 
 
 ## 3. `RedPointStruct`
@@ -180,9 +178,31 @@ function register(params):
 
 TODO
 
-## 5. 红点树预构建工具
 
 
+## 5. 红点树结构配置方案
+
+### 1. 从配置表构建
+
+策划使用配置表，通过一定的结构实现红点树的树型结构，客户端在进入游戏前，预先生成红点树的数据结构。
+
+优点：主要由策划进行维护
+
+缺点：可视化效果差，有需求变更时需要策划客户端两方共同解决
+
+### 2. 通过Unity GUI实现
+
+通过`UGUI`开发一个插件，实现一个可视化的红点树构造工具，具体功能如下：
+
+1. 可以添加根结点，并在根节点上递归地添加子结点
+2. 可以通过`Json`文件生成红点树
+3. 可以将红点树导出为`Json`文件
+4. 添加子红点时，可以提供构造函数必要的参数
+5. 修改父红点的名称时，需要同步修改子红点的名称
+
+优点：可视化效果好，完全由客户端维护
+
+缺点：需要额外开发插件
 
 # 需要明确的需求
 
@@ -219,4 +239,8 @@ TODO
    如果该结点的`showNum>0`则不对子红点进行遍历（脏标仍然为`false`），否则需要遍历，
 2. 如果有需求是希望红点用特别的符号代表，比如说聊天红点希望用最新一条记录的头像这种怎么处理？
    新增的自定义红点，`ctor`时需要传入方法，单独处理？
-3. 
+3. 红点的树构建时，如何设置刷新方法（`RedPointStruct`），如何关联到相应的刷新方法？
+   通过红点id映射到刷新方法，但是需要考虑如果有多个刷新方法时如何实现。
+
+4. 红点的刷新方法如何绑定到红点上？
+   新增一个红点刷新方法配置文件（刷新方法的key关联到刷新方法），在红点构造时传入相应的key来映射到对应方法。
