--- a/红点系统综述.md
+++ b/红点系统综述.md
@@ -38,40 +38,76 @@
 
 # 红点系统设计
 
+在叙述以下系统设计前，先明确以下几个概念：
+
+**逻辑红点：**红点的实际数据对象，红点的显示与否或是
+
+**红点UI：**红点的表现层，与数据无关，相关数据通过`RedPointManager`去检查
+
+**红点id：**红点的唯一key，上述两种红点都能通过id唯一索引。这个红点id考虑采用idString。
+
+**红点条件：**一个逻辑红点可以由多个红点条件组成，每个红点条件对应唯一的刷新方法。
+
+
+
 ## 1. `RedPointManager`
 
 整个红点系统由`RedPointManager`统一管理，提供对外接口来管理红点。`RedPointManager`主要包含三部分：红点森林、红点`UI`的`Map`和事件观察者（`eventObserver`）。这样设计的主要目的，是可以把逻辑、`UI`和事件相互隔离，避免耦合。
 
-**为什么采用红点森林？**
+### 红点森林
 
-因为在开发过程中，可能会遇到策划需要红点不进行穿透（自定义红点穿透），这种情况下，子红点的显示就不应该影响父红点的显示。红点森林包含多棵红点树，每棵红点树作为一个独立的结构进行逻辑管理。
+因为在开发过程中，可能会遇到策划需要红点不进行穿透（自定义红点穿透），这种情况下，子红点的显示就不应该影响父红点的显示。红点森林包含多棵红点树，每棵红点树作为一个独立的结构进行逻辑管理。红点森林保存所有红点树的根节点。
 
-**红点`UI`如何关联到逻辑红点？**
+### 事件观察者
 
-1. 在业务逻辑开发中，红点`UI`通过`id`绑定到逻辑红点。
-2. 事件到来时，事件观察者找到事件对应的逻辑红点。
-3. 逻辑红点进行刷新，并设置红点`UI`的显示。
+<img src="./图片/事件观察者.png" alt="事件观察者" style="zoom:20%;" />
 
-**红点`UI`的绑定时机？**
+事件观察者`eventObserverMap`保存了每一个不同的事件会影响的红点。当其中的事件发生时，`RedPointManager`会检索是否有相关的**逻辑红点**需要刷新。不同事件可能会对应同一个逻辑红点，因为红点的刷新可能会由多个事件驱动。
 
-在进入红点所在界面的时候进行绑定，在离开该界面需要对红点进行解绑。
+### 红点UI映射
 
-**红点`UI`的刷新流程？**
+保存红点UI的映射，当事件发生时，检查`redPointUIMap`判断是否有在界面的红点需要刷新，当存在这样的红点时，会通过`RedPointManager`找到相关联的逻辑红点进行显示刷新，这个过程会实际进行红点刷新方法（`updateFunc`）的调用，重置脏标。
+
+### 逻辑红点的注册与刷新
+
+**必须参数**
+
+`idString`：红点的层级路径所对应的字符串
+
+**注册流程图**
+
+<img src="./图片/逻辑红点注册流程图.png" alt="逻辑红点注册流程图" style="zoom:50%;" />
+
+**刷新流程图**
+
+<img src="./图片/逻辑红点刷新流程图.png" alt="逻辑红点刷新流程图" style="zoom:25%;" />
 
 1. 事件通知`RedPointManager`，`RedPointManager`在森林中找到相应的`RedPointTree`，然后找到对应的那个红点
 2. 向根节点设置脏标，逻辑上，但不进行逻辑判断
 3. 如果该红点`UI`注册在`RedPointManager`中，则调用对应红点的刷新方法（向叶子红点递归地计算红点），刷新红点的显示，重置脏标
 
-**如果是其中的某个非叶子结点需要刷新该怎么处理？**
+### 业务层绑定
 
-先判断自身的刷新函数，本身为`true`则不再对子红点进行遍历，脏标设置为false：
-情况①：子红点又因为事件发生了变化，则该红点仍然会被设置脏标；
-情况②：该红点因为事件改变，本身需要设置脏标；
-优先级不会产生问题，因为是通过红点map进行管理的，所以不同类型的红点会有独立的脏标
-问题1：在何时进行优先级判断
-暂时考虑在`UI`刷新中，根据该红点注册的红点类型，按优先级判断，所以在`RedPointStruct:isShow()`中只对某个类型的显示与否进行判断。
-问题2：`customData`怎么处理?
-留给刷新方法自己获取
+客户端在进行业务开发时，
+
+进入界面（如`onLoad`）时，将红点UI和红点id进行绑定。当事件到来时，通过`redPointUIMap`进行红点UI的刷新。
+
+退出界面（如`onUnload`）时，需要将红点UI从`redPointUIMap`中清除，防止不必要的刷新逻辑，同时避免当红点UI销毁了调用刷新方法的报错。
+
+**UI刷新流程**
+
+<img src="./图片/红点UI刷新流程.png" alt="逻辑红点注册流程图" style="zoom:50%;" />
+
+### 非叶子结点刷新的处理方法
+
+1. 若有自己的刷新方法，调用刷新方法数，返回为`true`则不再对子红点进行遍历，脏标设置为false：
+   情况①：子红点又因为事件发生了变化，则该红点仍然会被设置脏标；
+   情况②：该红点因为事件改变，本身需要设置脏标；
+   优先级不会产生问题，因为是通过红点map进行管理的，所以不同类型的红点会有独立的脏标
+
+2. 否则，递归地调用子红点的刷新方法。
+
+   
 
 ## 2. `RedPointTree`
 
@@ -86,6 +122,8 @@
 构造红点树的流程相当于在红点树上新增子红点。一般来说应该从根开始建立，因为在红点树中保存了红点`id`到`RedPointStruct`的映射，所以可以从**叶子到根**进行构造。这样做的好处在于，1.可以避免遍历从根向下进行遍历（尽管事件复杂度为`log(n)`）；2.可以把直接添加红点到父红点和建树逻辑统一。
 
 从叶子到根流程如下：
+
+<img src="./图片/红点树注册流程.png" alt="红点树注册流程" style="zoom:50%;" />
 
 1.通过 `idString`（如 `"main|task|daily"`）从 **叶子到根** 依次构造节点；
 
@@ -244,3 +282,12 @@ TODO
 
 4. 红点的刷新方法如何绑定到红点上？
    新增一个红点刷新方法配置文件（刷新方法的key关联到刷新方法），在红点构造时传入相应的key来映射到对应方法。
+   就是上述所说的红点条件唯一对应刷新方法。
+
+5. 红点显示的优先级判断
+   暂时考虑在`UI`刷新中，根据该红点注册的红点类型，按优先级判断，所以在`RedPointStruct:isShow()`中只对某个类型的显示与否进行判断
+6. 自定义数据`customData`的处理方法?
+   留给刷新方法自己获取
+7. 红点UI是否应当与红点Id唯一对应？
+   考虑到有多个UI使用一个红点Id的逻辑，比如背包道具，不同的道具可能使用的是同一个逻辑红点，只是传入的数据不同，但是这样的脏标设置就会有问题。
+   现在暂时采用idString作为key，但是这样我认为会有很多冗余，后续考虑是否可以优化脏标设置方法。或者可以用map保存ui映射，这样可以同一个id一次性对应，但这样否认了之前的唯一对应关系
