文档补全，新增ppt

--- a/红点系统综述.md
+++ b/红点系统综述.md
@@ -1,14 +1,12 @@
-# 红点系统综述
+# 红点系统概述
 
-
-
-## 红点的结构
+## 红点系统的结构
 
 红点主要分为以下两种结构：
 
 **树型红点**
 
-这类红点主要符合游戏的界面层级结构，子红点的显示逻辑独立，同一层级的子红点以或关系影响父红点的显示（穿透）。
+这是最常见的红点系统的机构，子红点的显示状态由其自身决定，父红点的显示状态受子红点和自身共同决定。
 
 **独立红点**
 
@@ -34,19 +32,23 @@
 
 为一些玩法特设的红点，逻辑可能和以上任意一种相同，但是表现不同。比如，策划可以要求有新的道具到包使用绿色感叹号，或者有新任务使用黄色感叹号（逻辑同普通红点）。
 
+## 红点系统设计目标
+
+我们的红点系统旨在提供 **高度易用性**，在预先构建好逻辑红点树的前提下，业务开发人员仅需绑定/解绑红点UI，整个红点系统就会自动对红点的数据和显示进行管理；具备 **强大可拓展性**，采用树状结构支持父节点自动汇总、叶子节点可绑定多标签(Tag)，且支持运行时动态增减，样式可定制，适应复杂场景；同时，系统实现MVC设计，红点状态由事件/驱动计算（如任务完成、新消息到达），并被同一管理，UI 仅监听状态变更负责渲染，不涉业务逻辑，确保模块内聚、接口清晰，逻辑可测试、代码维护性高。
+
 
 
 # 红点系统设计
 
 在叙述以下系统设计前，先明确以下几个概念：
 
-**逻辑红点：**红点的实际数据对象，红点的显示与否或是
+**逻辑红点：**§红点的实际数据对象，红点的显示状态由逻辑红点进行计算。
 
-**红点UI：**红点的表现层，与数据无关，相关数据通过`RedPointManager`去检查
+**红点UI：**红点的表现层，显示状态通过红点系统查询逻辑红点的状态进行更新。
 
-**红点id：**红点的唯一key，上述两种红点都能通过id唯一索引。这个红点id考虑采用idString。
+**红点id：**红点的唯一key，可以唯一索引到逻辑红点。
 
-**红点条件：**一个逻辑红点可以由多个红点条件组成，每个红点条件对应唯一的刷新方法。
+**红点条件：**判断红点是否显示的逻辑。一个逻辑红点可以包含多个红点条件，条件之间是【或】关系，每个红点条件对应唯一的刷新方法。
 
 
 
@@ -82,7 +84,7 @@
 
 <img src="./图片/逻辑红点刷新流程图.png" alt="逻辑红点刷新流程图" style="zoom:25%;" />
 
-1. 事件通知`RedPointManager`，`RedPointManager`在森林中找到相应的`RedPointTree`，然后找到对应的那个红点
+1. 事件通知`RedPointManager`，`RedPointManager`找到相应的事件观察者
 2. 向根节点设置脏标，逻辑上，但不进行逻辑判断
 3. 如果该红点`UI`注册在`RedPointManager`中，则调用对应红点的刷新方法（向叶子红点递归地计算红点），刷新红点的显示，重置脏标
 
@@ -119,7 +121,7 @@
 
 ### 构造红点树
 
-构造红点树的流程相当于在红点树上新增子红点。一般来说应该从根开始建立，因为在红点树中保存了红点`id`到`RedPointStruct`的映射，所以可以从**叶子到根**进行构造。这样做的好处在于，1.可以避免遍历从根向下进行遍历（尽管事件复杂度为`log(n)`）；2.可以把直接添加红点到父红点和建树逻辑统一。
+构造红点树的流程相当于在红点树上新增子红点。一般来说应该从根开始建立，因为在红点树中保存了红点`id`到`RedPointStruct`的映射，所以可以从**叶子到根**进行构造。这样做的好处在于，1.可以避免遍历从根向下进行遍历（尽管事件复杂度为`log(n)`）；2.可以把直接添加红点到父红点和建树逻辑统一。整个流程相当于递归地构造一棵子树。
 
 从叶子到根流程如下：
 
@@ -131,9 +133,7 @@
 
 3.自动建立父子关系；
 
-4.设置叶子节点的 `updateFunc`；
-
-5.如果尚未设置 `root`，则以最顶层 id 对应节点作为根节点。
+4..如果尚未设置 `root`，则以最顶层 id 对应节点作为根节点。
 
 ```pseudocode
 function register(params):
@@ -176,7 +176,7 @@ function register(params):
 
 ## 3. `RedPointStruct`
 
-<img src="./图片/RedPointStruct.png" alt="RedPointStruct的结构" style="zoom:80%;" />
+<img src="./图片/UML_RedPointStruct.png" alt="RedPointStruct的结构" style="zoom:80%;" />
 
 上图描述了`RedPointStruct`的基本结构和方法，下面将详细描述一些重要的数据和方法。
 
@@ -194,11 +194,7 @@ function register(params):
 
 **`dirtyMap`**
 
-`dirtyMap`保存了`RedPointStruct`到是否为脏(`bool`)的映射。设置脏标的主要目的是减少不必要的计算。因为红点树作为保存红点的数据结构，在游戏开始时就创建出来了，但是实际要求显示的红点可能并不存在，所以计算红点的显示数据会浪费不必要的性能。使用`dirtyMap`后，在事件触发时对影响到的红点设置脏标，在需要实际计算时，只有有脏标的才进行计算，大大减少了不必要的计算。
-
-**`isShowMap`**
-
-保存实际计算后的红点数据，`key`为`RedPointType`。
+`dirtyMap`保存了`RedPointStruct`的脏标和红点状态的缓存值。设置脏标的主要目的是减少不必要的计算。因为红点树作为保存红点的数据结构，在游戏开始时就创建出来了，但是实际要求显示的红点可能并不存在，所以计算红点的显示数据会浪费不必要的性能。使用`dirtyMap`后，在事件触发时对影响到的红点设置脏标，在需要实际计算时，只有有脏标的才进行计算，大大减少了不必要的计算。
 
 **`children`&`parent`**
 
@@ -210,17 +206,32 @@ function register(params):
 
 叶子红点必须有刷新方法，否则没有意义。非叶红点可以没有刷新方法（通过子红点来进行刷新）。当非叶红点有刷新方法时，需要确定刷新方法的优先级。
 
+## 4. 红点UI
+
+红点UI通过组件化的形式进行实现，这样的实现方式有如下优点：
+
+1. 易于添加，拓展
+2. 在红点进入界面（如红点node的onLoad时机）时可以自己进行管理红点的刷新，不需要业务开发者手动进行调用
+3. 对外提供接口，从而业务开发者也可以自己管理红点的显示属性
+
+**构造参数**
+
+`红点id`：红点的唯一key
+`redPointType`：红点当前的显示类型。因为这里是界面上的信息，所以当前的显示类型应当唯一，如果有多个显示类型应当能确定优先级
+
+`customData(optional)`：用户自定义数据。为了解决多个红点共用一个红点id的可能性，所以需要传入customData（比如背包道具的typeid），以便可以自动处理红点刷新逻辑。但是需要明确的是，自定义数据只是为了将相同id的红点进一步细分出来，具体的逻辑数据应当在updateFunc中处理，并不是把数据保存在node上。
 
 
-## 4. 红点问题检查工具
+
+## 5. 红点问题检查工具
 
 TODO
 
 
 
-## 5. 红点树结构配置方案
+## 6. 红点树结构配置方案
 
-### 1. 从配置表构建
+### 方案一、从配置表构建
 
 策划使用配置表，通过一定的结构实现红点树的树型结构，客户端在进入游戏前，预先生成红点树的数据结构。
 
@@ -228,7 +239,7 @@ TODO
 
 缺点：可视化效果差，有需求变更时需要策划客户端两方共同解决
 
-### 2. 通过Unity GUI实现
+### 方案二、通过Unity GUI实现
 
 通过`UGUI`开发一个插件，实现一个可视化的红点树构造工具，具体功能如下：
 
@@ -286,8 +297,19 @@ TODO
 
 5. 红点显示的优先级判断
    暂时考虑在`UI`刷新中，根据该红点注册的红点类型，按优先级判断，所以在`RedPointStruct:isShow()`中只对某个类型的显示与否进行判断
+
 6. 自定义数据`customData`的处理方法?
    留给刷新方法自己获取
+
 7. 红点UI是否应当与红点Id唯一对应？
+
    考虑到有多个UI使用一个红点Id的逻辑，比如背包道具，不同的道具可能使用的是同一个逻辑红点，只是传入的数据不同，但是这样的脏标设置就会有问题。
+   方案1：每一个红点都采用不同的红点id
+
+   优点：方便处理脏标	缺点：会导致大量的内存占用，并且拓展不方便
+
+   方案2：刷新逻辑相同的红点采用相同的刷新方法
+
+   优点：解决内存占用问题	缺点：脏标设置会冲突
+
    现在暂时采用idString作为key，但是这样我认为会有很多冗余，后续考虑是否可以优化脏标设置方法。或者可以用map保存ui映射，这样可以同一个id一次性对应，但这样否认了之前的唯一对应关系
